--- a/_includes/themes/the-program/default.html
+++ b/_includes/themes/the-program/default.html
@@ -43,7 +43,7 @@
             <div class="results">
                 <a href="/archives">{{ site.translations.archives }}</a>
                 <a href="/categories/#articles">{{ site.translations.articles }}</a>
-                <a href="/categories/#links">{{ site.translations.links }}</a>
+                <a href="/categories/#notes">{{ site.translations.notes }}</a>
                 <a href="/categories">{{ site.translations.categories }}</a>
                 <a href="/tags">{{ site.translations.tags }}</a>
                 <a href="/">{{ site.translations.about }}</a>
