--- a/_includes/themes/the-program/default.html
+++ b/_includes/themes/the-program/default.html
@@ -43,8 +43,8 @@
             <div class="results">
                 <a href="/archives">{{ site.translations.archives }}</a>
                 <a href="/categories/#articles">{{ site.translations.articles }}</a>
-                <a href="/categories/#notes">{{ site.translations.notes }}</a>
                 <a href="/categories">{{ site.translations.categories }}</a>
+				<a href="/assets">{{ site.translations.assets }}</a>
                 <a href="/tags">{{ site.translations.tags }}</a>
                 <a href="/">{{ site.translations.about }}</a>
             </div>
@@ -71,9 +71,9 @@
                                 <!--[if !IE]> --><button class="btn-search" data-ga="Search"></button><!-- <![endif]-->
                             </li>
                             <li class="nav-link"><a data-ga="Archives" href="/archives">{{ site.translations.archives }}</a></li>
-                            <li class="nav-link"><a data-ga="Articles" href="/categories#articles">{{ site.translations.articles }}</a></li>
-                            <li class="nav-link"><a data-ga="Notes" href="/categories#notes">{{ site.translations.notes }}</a></li>
+                            <li class="nav-link"><a data-ga="Articles" href="/categories#articles">{{ site.translations.articles }}</a></li> 
                             <li class="nav-link"><a data-ga="Categories" href="/categories">{{ site.translations.categories }}</a></li>
+							 <li class="nav-link"><a data-ga="Assets" href="/assets">{{ site.translations.assets }}</a></li>
                             <li class="nav-link"><a data-ga="Tags" href="/tags">{{ site.translations.tags }}</a></li>
                             <!--[if !IE]> --><li class="nav-link"><a data-ga="Search" class="btn-search" href="#">{{ site.translations.search }}</a></li><!-- <![endif]-->
                         </ul>
