--- a/_includes/themes/the-program/default.html
+++ b/_includes/themes/the-program/default.html
@@ -45,6 +45,7 @@
                 <a href="/categories/#articles">{{ site.translations.articles }}</a>
                 <a href="/categories">{{ site.translations.categories }}</a>
 				<a href="/assets">{{ site.translations.assets }}</a>
+				<a href="http://www.cnblogs.com/zhanjindong/">{{ site.translations.cnblog }}</a>
                 <a href="/tags">{{ site.translations.tags }}</a>
                 <a href="/">{{ site.translations.about }}</a>
             </div>
@@ -74,6 +75,7 @@
                             <li class="nav-link"><a data-ga="Articles" href="/categories#articles">{{ site.translations.articles }}</a></li> 
                             <li class="nav-link"><a data-ga="Categories" href="/categories">{{ site.translations.categories }}</a></li>
 							 <li class="nav-link"><a data-ga="Assets" href="/assets">{{ site.translations.assets }}</a></li>
+							 <li class="nav-link"><a data-ga="CnBlog" href="http://www.cnblogs.com/zhanjindong/">{{ site.translations.cnblog }}</a></li>
                             <li class="nav-link"><a data-ga="Tags" href="/tags">{{ site.translations.tags }}</a></li>
                             <!--[if !IE]> --><li class="nav-link"><a data-ga="Search" class="btn-search" href="#">{{ site.translations.search }}</a></li><!-- <![endif]-->
                         </ul>
