--- a/_includes/themes/the-program/default.html
+++ b/_includes/themes/the-program/default.html
@@ -115,9 +115,9 @@
                             {% if site.translations.extra_info != "" %}<p>{{ site.translations.extra_info }}</p>{% endif %}
                         </div>
                         <div class="social-links">
-                            <a class="ico-linkedin" href="http://linkedin.com/in/{{ site.author.username }}nz/" rel="me" target="_blank" title="LinkedIn Profile"></a>
+                            <a class="ico-linkedin" href="http://linkedin.com/in/{{ site.author.username }}/" rel="me" target="_blank" title="LinkedIn Profile"></a>
                             <a class="ico-github" href="http://github.com/{{ site.author.username }}/" rel="me" target="_blank" title="GitHub Page"></a>
-                            <a class="ico-gmail" href="http://scr.im/{{ site.author.username }}me/" rel="me" target="_blank" title="Email Address"></a>
+                            <a class="ico-gmail" href="mailto:jdzhan@live.com" rel="me" target="_blank" title="Email Address"></a>
                             <a class="ico-stackoverflow" href="http://stackoverflow.com/users/{{ site.author.stackoverflow }}" rel="me" target="_blank" title="StackOverflow Profile"></a>
                             <a class="ico-rss" href="/rss.xml" rel="me" target="_blank" title="RSS Feeds"></a>
                         </div>
