--- a/_includes/themes/the-program/default.html
+++ b/_includes/themes/the-program/default.html
@@ -68,7 +68,7 @@
                         <ul>
                             <li class="logo nav-link">
                                 <button class="btn-menu" data-ga="Menu"></button>
-                                <a href="/blog">{{ site.title }}</a>
+                                <a href="/blog"><img src="http://zhanjindong.com/assets/images/sign.png" /></a>
                                 <!--[if !IE]> --><button class="btn-search" data-ga="Search"></button><!-- <![endif]-->
                             </li>
                             <li class="nav-link"><a data-ga="Archives" href="/archives">{{ site.translations.archives }}</a></li>
